<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/items_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:divider="@android:color/transparent"
        android:paddingBottom="@dimen/list_item_padding"
        android:paddingTop="@dimen/list_item_padding"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/items_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/no_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/no_items_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/no_items"
            android:src="@drawable/ic_no_item" />

        <TextView
            android:id="@+id/no_items_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/list_item_padding"
            android:text="@string/no_items" />

    </LinearLayout>

    <TextView
        android:id="@+id/items_quantity"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/activity_small_horizontal_margin"
        android:paddingLeft="@dimen/activity_small_horizontal_margin"
        android:paddingRight="@dimen/activity_small_horizontal_margin"
        android:paddingStart="@dimen/activity_small_horizontal_margin"
        android:text="@string/order_items_total_quantity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/total_items_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/total_items_price"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/activity_small_horizontal_margin"
        android:paddingLeft="@dimen/activity_small_horizontal_margin"
        android:paddingRight="@dimen/activity_small_horizontal_margin"
        android:paddingStart="@dimen/activity_small_horizontal_margin"
        android:text="@string/order_price"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/items_quantity"
        app:layout_constraintTop_toBottomOf="@+id/items_list"
        app:layout_constraintVertical_weight="1" />

</android.support.constraint.ConstraintLayout>
